[package]
name = "plato-validate"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Input validation and sanitization for PLATO tile data"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }
regex = "1"
